--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,20 @@
     		socket.on('my response', function(msg) {
         		$('#log').append('<p>Received: ' + msg.data + '</p>');
     		});
-    		$('form#emit').submit(function(event) {
-        		socket.emit('my event', {data: $('#emit_data').val()});
+
+            socket.on('cell response', function(msg) {
+        		$('#'+msg.data).append('<span style="font-size: 40px;">X</span>');
+    		});
+
+    		$('.cell').click(function(event) {
+    		    var cell_id = $(this).attr('id');
+        		socket.emit('my event', {data: cell_id});
+        		return false;
+    		});
+
+    		$('.cell').click(function(event) {
+    		    var cell_id = $(this).attr('id');
+        		socket.emit('cell event', {data: cell_id});
         		return false;
     		});
     		$('form#broadcast').submit(function(event) {
