add two sync user

--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -73,3 +73,13 @@ body {
     font-size: 24px;
     text-align: center;
 }
+
+#log{
+    width: 45%;
+    float: left;
+}
+
+.container{
+    float: left;
+    width: 45%;
+}
