--- a/templates/login.html
+++ b/templates/login.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Login to Game</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./static/css/chat.css">
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
 </head>
 <body>
     <form class="login" method="post">
-        <input type="text" placeholder="login:" name="username">
-        <input type="password" placeholder="password:" name="password">
+        <input type="text" placeholder="login:" name="username"><br/>
+        <input type="password" placeholder="password:" name="password"><br/>
         <input type="submit" value="Log In"/>
     </form>
 </body>
