--- a/templates/index.html
+++ b/templates/index.html
@@ -58,13 +58,13 @@
 
     <div class="container">
         <div class="game">
-            <table class="game-table">
+            <table class="game-table" onmouseover="alert('Not your time!')">
                 <thead class="table-header">
                     <tr>
                         <td colspan="3">Game Board</td>
                     </tr>
                 </thead>
-                <tbody id="game-board" class="table-body">
+                <tbody id="game-board" class="table-body" >
                     <tr>
                         <td id='1' class="cell" data-status="true"></td>
                         <td id='2' class="cell" data-status="true"></td>
