--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
 
     <div class="container">
         <div class="game">
-            <table class="game-table" onmouseover="alert('Not your time!')">
+            <table class="game-table">
                 <thead class="table-header">
                     <tr>
                         <td colspan="3">Game Board</td>
