--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
     <script type="text/javascript">
     	$(document).ready(function(){
-    		var socket = io.connect('http://127.0.0.1:5000/test');
+    		var socket = io.connect('http://haidei-game.herokuapp.com/test');
     		socket.on('my response', function(msg) {
         		$('#log').append('<p>Received: from '+ msg.cell_name + ' to -> '+ msg.data + '</p>');
     		});
