--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,11 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
     <script type="text/javascript">
     	$(document).ready(function(){
-    		var socket = io.connect('http://haidei-game.herokuapp.com/test');
+//    		var socket = io.connect('http://haidei-game.herokuapp.com/test');
+    		var socket = io.connect('http://127.0.0.1:5000/test');
 
             socket.on('my connecting', function(msg) {
-        		$('#connecting').append('<p>Received: from '+ msg.data + '</p>');
+        		$('#connecting').append('<p>'+ msg.name+' ' + msg.data+'</p>');
     		});
 
     		socket.on('my response', function(msg) {
@@ -23,9 +24,6 @@
         		$('#'+msg.data).attr("data-status", "false");
     		});
 
-    		socket.on('login response', function(msg) {
-        		$('#login-place').append("<p>"+msg.data+"</p>");
-    		});
 
     		$('.cell').click(function(event) {
     		    var cell_id = $(this).attr('id');
@@ -43,15 +41,11 @@
         		socket.emit('my event', {data: cell_id});
         		return false;
     		});
-    		$('.login').submit(function(event) {
-        		socket.emit('my broadcast event', {data: $("#name").val()});
-        		return false;
-    		});
 
-    		$('#join').submit(function(event) {
-        		socket.emit('join', {room: $('#join_room').val()});
-        		return false;
-    		});
+    		$('form#join').submit(function(event) {
+                socket.emit('join', {room: $('#join_room').val()});
+                return false;
+            });
 		});
     </script>
 </head>
