--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,11 @@
                 socket.emit('join', {room: room});
                 return false;
             });
+
+            $('form#leave').submit(function(event) {
+                socket.emit('leave', {room: $('#leave_room').val()});
+                return false;
+            });
 		});
     </script>
 </head>
@@ -55,6 +60,10 @@
     <form id="join" method="POST" action='#'>
         <input type="text" name="join_room" id="join_room" placeholder="Room Name">
         <input type="submit" value="Join Room">
+    </form>
+    <form id="leave" method="POST" action='#'>
+        <input type="text" name="leave_room" id="leave_room" placeholder="Room Name">
+        <input type="submit" value="Leave Room">
     </form>
 
     <div class="container">
