--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,7 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
     <script type="text/javascript">
     	$(document).ready(function(){
-    	//	var socket = io.connect('http://haidei-game.herokuapp.com/test');
-    		var socket = io.connect('http://flaskgame-haidei.rhcloud.com/test');
+    		var socket = io.connect('http://haidei-game.herokuapp.com/test');
 
             socket.on('my connecting', function(msg) {
         		$('#connecting').append('<p>'+ msg.name+' ' + msg.data+'</p>');
