--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
     <script type="text/javascript">
     	$(document).ready(function(){
-    		var socket = io.connect('http://haidei-game.herokuapp.com/test');
-    	//	var socket = io.connect('http://127.0.0.1:5000/test');
+    		var socket = io.connect('ws://haidei-game.herokuapp.com/test');
+    		// var socket = io.connect('ws://127.0.0.1:5000/test');
 
             socket.on('my connecting', function(msg) {
         		$('#connecting').append('<p>'+ msg.name+' ' + msg.data+'</p>');
@@ -75,19 +75,19 @@
                 </thead>
                 <tbody id="game-board" class="table-body" >
                     <tr>
-                        <td id='1' class="cell" data-status="true"></td>
-                        <td id='2' class="cell" data-status="true"></td>
-                        <td id='3' class="cell" data-status="true"></td>
+                        <td id='1' class="cell" data-status="true">1</td>
+                        <td id='2' class="cell" data-status="true">2</td>
+                        <td id='3' class="cell" data-status="true">3</td>
                     </tr>
                     <tr>
-                        <td id='4' class="cell" data-status="true"></td>
-                        <td id='5' class="cell" data-status="true"></td>
-                        <td id='6' class="cell" data-status="true"></td>
+                        <td id='4' class="cell" data-status="true">4</td>
+                        <td id='5' class="cell" data-status="true">5</td>
+                        <td id='6' class="cell" data-status="true">6</td>
                     </tr>
                     <tr>
-                        <td id='7' class="cell" data-status="true"></td>
-                        <td id='8' class="cell" data-status="true"></td>
-                        <td id='9' class="cell" data-status="true"></td>
+                        <td id='7' class="cell" data-status="true">7</td>
+                        <td id='8' class="cell" data-status="true">8</td>
+                        <td id='9' class="cell" data-status="true">9</td>
                     </tr>
                 </tbody>
             </table>
