--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,6 @@
     		    var cell_id = $(this).attr('id');
     		    if ($(this).attr('data-status') === "true"){
         		    socket.emit('cell event', {data: cell_id});
-
         		}else{
         		    alert('Field is blocked!');
         		}
@@ -75,19 +74,19 @@
                 </thead>
                 <tbody id="game-board" class="table-body" >
                     <tr>
-                        <td id='1' class="cell" data-status="true">1</td>
-                        <td id='2' class="cell" data-status="true">2</td>
-                        <td id='3' class="cell" data-status="true">3</td>
+                        <td id='1' class="cell" data-status="true"></td>
+                        <td id='2' class="cell" data-status="true"></td>
+                        <td id='3' class="cell" data-status="true"></td>
                     </tr>
                     <tr>
-                        <td id='4' class="cell" data-status="true">4</td>
-                        <td id='5' class="cell" data-status="true">5</td>
-                        <td id='6' class="cell" data-status="true">6</td>
+                        <td id='4' class="cell" data-status="true"></td>
+                        <td id='5' class="cell" data-status="true"></td>
+                        <td id='6' class="cell" data-status="true"></td>
                     </tr>
                     <tr>
-                        <td id='7' class="cell" data-status="true">7</td>
-                        <td id='8' class="cell" data-status="true">8</td>
-                        <td id='9' class="cell" data-status="true">9</td>
+                        <td id='7' class="cell" data-status="true"></td>
+                        <td id='8' class="cell" data-status="true"></td>
+                        <td id='9' class="cell" data-status="true"></td>
                     </tr>
                 </tbody>
             </table>
