--- a/templates/index.html
+++ b/templates/index.html
@@ -56,12 +56,12 @@
 </head>
 <body>
     <form id="join" method="POST" action='#'>
-        <input type="text" name="join_room" id="join_room" placeholder="Room Name">
-        <input type="submit" value="Join Room">
+        <input class="form-control" type="text" name="join_room" id="join_room" placeholder="Room Name">
+        <input class="btn btn-success" type="submit" value="Join Room">
     </form>
     <form id="leave" method="POST" action='#'>
-        <input type="text" name="leave_room" id="leave_room" placeholder="Room Name">
-        <input type="submit" value="Leave Room">
+        <input class="form-control" type="text" name="leave_room" id="leave_room" placeholder="Room Name">
+        <input class="btn btn-danger" type="submit" value="Leave Room">
     </form>
 
     <div class="container">
