--- a/templates/login.html
+++ b/templates/login.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <form class="login" method="post">
-        <input type="text" placeholder="login:" name="username"><br/>
-        <input type="password" placeholder="password:" name="password"><br/>
-        <input type="submit" value="Log In"/>
+        <input class="form-control" type="text" placeholder="login:" name="username"><br/>
+        <input class="form-control" type="password" placeholder="password:" name="password"><br/>
+        <input class="form-control" type="submit" value="Log In"/>
     </form>
 </body>
 </html>
