--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
     <script type="text/javascript">
     	$(document).ready(function(){
-    		var socket = io.connect('ws://haidei-game.herokuapp.com/test');
+    		//var socket = io.connect('ws://haidei-game.herokuapp.com/test');
+    		var socket = io.connect('http://' + document.domain + ':' + location.port);
     		//var socket = io.connect('ws://127.0.0.1:5000/test');
 
             socket.on('my connecting', function(msg) {
