--- a/templates/index-with-comp.html
+++ b/templates/index-with-comp.html
@@ -61,7 +61,7 @@
     <form id="join" method="POST" action='#'>
         <input class="form-control" type="text" name="join_room" id="join_room" placeholder="Room Name">
         <input class="btn btn-success" type="submit" value="Join Room">
-    </form><br/>
+    </form>
     <form id="leave" method="POST" action='#'>
         <input class="form-control" type="text" name="leave_room" id="leave_room" placeholder="Room Name">
         <input class="btn btn-danger" type="submit" value="Leave Room">
