--- a/templates/login.html
+++ b/templates/login.html
@@ -10,8 +10,10 @@
 </head>
 <body>
     <form class="login" method="post">
-        <input class="form-control" type="text" placeholder="login:" name="username"><br/>
-        <input class="form-control" type="password" placeholder="password:" name="password"><br/>
+        <input class="form-control" type="text" placeholder="login:" name="username"/><br/>
+        <input class="form-control" type="password" placeholder="password:" name="password"/><br/>
+        <input class="human" type="radio" name='humans-game' value='human' checked="checked"/>Game with human<br/>
+        <input class="machine" type="radio" name='machine' value='machine'/>Game with machine<br/>
         <input class="form-control" type="submit" value="Log In"/>
     </form>
 </body>
