--- a/templates/login.html
+++ b/templates/login.html
@@ -6,14 +6,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./static/css/chat.css">
     <script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
 </head>
 <body>
     <form class="login" method="post">
         <input class="form-control" type="text" placeholder="login:" name="username"/><br/>
         <input class="form-control" type="password" placeholder="password:" name="password"/><br/>
-        <input class="human" type="radio" name='humans-game' value='human' checked="checked"/>Game with human<br/>
-        <input class="machine" type="radio" name='machine' value='machine'/>Game with machine<br/>
+        <input class="human-check" type="checkbox" name="human"/>Game with Human<br/>
+        <input class="bot-check" type="checkbox" name="bot"/>Game with Bot<br/>
         <input class="form-control" type="submit" value="Log In"/>
     </form>
 </body>
