--- a/templates/index-with-comp.html
+++ b/templates/index-with-comp.html
@@ -5,10 +5,10 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./static/css/chat.css">
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
+    <script type="text/javascript" src="./static/js/socket.io.js"></script>
     <script type="text/javascript">
     	$(document).ready(function(){
-    		var socket = io.connect('ws://localhost:50001/test');
+    		var socket = io.connect('ws://'+document.domain+':'+location.port+'/test');
 
             socket.on('bot connecting', function(msg) {
         		$('#connecting').append('<p>'+ msg.name+' ' + msg.data+'</p>');
