--- a/templates/index-with-comp.html
+++ b/templates/index-with-comp.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<title>Game</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+	<link rel="stylesheet" href=".static/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./static/css/chat.css">
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
+    <script type="text/javascript" src=".static/js/jquery-1.4.2.min.js"></script>
     <script type="text/javascript" src="./static/js/socket.io.js"></script>
     <script type="text/javascript">
     	$(document).ready(function(){
