--- a/templates/login.html
+++ b/templates/login.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Login to Game</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href=".static/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./static/css/chat.css">
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
+    <script type="text/javascript" src=".static/js/jquery-1.4.2.min.js"></script>
 </head>
 <body>
     <form class="login" method="post">
