--- a/templates/index-with-comp.html
+++ b/templates/index-with-comp.html
@@ -9,6 +9,7 @@
     <script type="text/javascript">
     	$(document).ready(function(){
     		var socket = io.connect('ws://'+document.domain+':'+location.port+'/test');
+            io.set('origins', 'http://haidei-game.herokuapp.com/');
 
             socket.on('bot connecting', function(msg) {
         		$('#connecting').append('<p>'+ msg.name+' ' + msg.data+'</p>');
