--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,10 @@
         		$('#log').append('<p>Received: from '+ msg.name + ' to -> '+ msg.data + '</p>');
     		});
 
+            socket.on('server test response', function(msg) {
+//        		$('#log').append('<p>Received: from '+ msg.name + ' to -> '+ msg.data + '</p>');
+    		});
+
             socket.on('cell response', function(msg) {
         		$('#'+msg.data).append(msg.name);
         		$('#'+msg.data).attr("data-status", "false");
