--- a/templates/index-with-comp.html
+++ b/templates/index-with-comp.html
@@ -43,6 +43,7 @@
     		    var cell_id = $(this).attr('id');
     		    if ($(this).attr('data-status') === "true"){
         		    socket.emit('bot cell event', {data: cell_id});
+                    $('#'+msg.data).attr("data-status", "false");
         		}else{
         		    alert('Field is blocked!');
         		}
@@ -52,6 +53,7 @@
     		$('.cell').click(function(event) {
     		    var cell_id = $(this).attr('id');
         		socket.emit('bot event', {data: cell_id});
+                $('#'+msg.data).attr("data-status", "false");
         		return false;
     		});
 
