--- a/templates/index-with-comp.html
+++ b/templates/index-with-comp.html
@@ -27,7 +27,7 @@
 
             socket.on('bot wins response', function(msg) {
                 $('.cell').attr("data-status", "false");
-                $('#connecting').append('<p>'+ msg.win+' Wins!</p>');
+                $('#log').append('<p>'+ msg.win+' Wins!</p>');
                 alert(msg.win+' Wins!');
             });
 
