--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     		});
 
             socket.on('wins response', function(msg) {
-                $('#connecting').append('<p>'+ msg.win+' Wins!</p>');
+                $('#log').append('<p>'+ msg.win+' Wins!</p>');
                 $('.cell').attr("data-status", "false");
                 alert(msg.win+' Wins!');
             });
